# OmniAgent

./: .gitignore  AGENTS.md  README.md  STATUS.md
.agents/skills/code-style/: SKILL.md
.agents/skills/composio-integration/: SKILL.md
.agents/skills/error-handling/: SKILL.md
.agents/skills/langgraph-patterns/: SKILL.md
.agents/skills/testing-patterns/: SKILL.md
.claude/: settings.json
.claude/agents/: README.md  code-reviewer.md  integration-tester.md  researcher.md  sop.md  system-architect.md  task-manager.md
.claude/commands/: add-tool.md  debug-agent.md  document.md  fix-issue.md  plan.md  refactor.md  review.md  ship.md  test.md
.claude/rules/: agents.md  backend.md  frontend.md  tests.md
.claude/skills/git-workflow/: SKILL.md
.claude/skills/tool-creation/: SKILL.md
.codex/: config.toml
backend/: Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  logging.py  main.py
backend/app/agents/: graph.py  nodes.py  prompts.py  schemas.py  state.py
backend/app/api/: auth.py  chat.py  connections.py
backend/app/db/: database.py  models.py
backend/app/models/: user.py
backend/app/services/: auth.py  composio_service.py  memory.py
backend/app/tools/: __init__.py  code_tools.py  composio_tools.py  file_tools.py  image_tools.py  selection.py
backend/tests/: conftest.py  test_api.py  test_graph.py  test_tools.py
frontend/: next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
frontend/scripts/: clean-next.mjs
frontend/src/: middleware.ts
(+27 files in other folders)
